Setting Reminder Option

--- a/FexconTimeTracker/Info.plist
+++ b/FexconTimeTracker/Info.plist
@@ -27,10 +27,12 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Chathura. All rights reserved.</string>
+	<string>Copyright © 2016 Chathura Lakmal. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSUserNotificationAlertStyle</key>
+	<string>alert</string>
 </dict>
 </plist>
